--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ streamlit = "^1.39.0"
 tqdm = "^4.66.5"
 flake8 = "^7.1.1"
 gymnasium = "^0.29.1"
+pytest = "^8.3.3"
+coverage = "^7.6.1"
 
 
 [build-system]
